[gd_scene load_steps=20 format=2]

[ext_resource path="res://components/harvester/sprites/spider/01-Spider-Shop/00-Spider_00038.png" type="Texture" id=1]
[ext_resource path="res://components/harvester/sprites/jet/01-Flug-Shop/00-Flug_00004.png" type="Texture" id=2]
[ext_resource path="res://components/harvester/sprites/Boden/01-Boden-Shop/00-Boden_00000.png" type="Texture" id=3]
[ext_resource path="res://components/harvester/sprites/shop/06 - FRONT - HÃ¤cksler/00 - Boden - ORG_00000.png" type="Texture" id=4]
[ext_resource path="res://components/harvester/sprites/shop/04 - FRONT - Eiersack/00 - Boden - ORG_00004.png" type="Texture" id=5]
[ext_resource path="res://components/harvester/sprites/shop/05 - FRONT - Drill/00 - Boden - ORG_00023.png" type="Texture" id=6]
[ext_resource path="res://components/harvester/sprites/shop/02 - TOP - Spule/00 - Boden - ORG_00002.png" type="Texture" id=7]
[ext_resource path="res://components/harvester/sprites/shop/01 - TOP - Gun/00 - Boden - ORG_00005.png" type="Texture" id=8]
[ext_resource path="res://components/build_menu/BuildMenu.gd" type="Script" id=9]
[ext_resource path="res://components/harvester/sprites/shop/03 - TOP - Shield/00 - Boden - ORG_00000.png" type="Texture" id=10]
[ext_resource path="res://components/build_menu/images/shadow_harvester_close_button_red_hover.png" type="Texture" id=11]
[ext_resource path="res://components/build_menu/images/shadow_harvester_close_button.png" type="Texture" id=12]
[ext_resource path="res://components/build_menu/build_menu_theme.tres" type="Theme" id=13]
[ext_resource path="res://components/build_menu/images/shadow_harvester_upgrade_screen.png" type="Texture" id=16]
[ext_resource path="res://assets/font/Akira_Expanded_Demo.otf" type="DynamicFontData" id=17]
[ext_resource path="res://assets/font/font.tres" type="DynamicFont" id=18]
[ext_resource path="res://components/build_menu/images/shadow_harvester_itembar_upgrade.png" type="Texture" id=19]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 17 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 1 )

[node name="BuildMenu" type="CanvasLayer" groups=["scene_manager_entity_nodes"]]
pause_mode = 2
script = ExtResource( 9 )
__meta__ = {
"entity_name": "BuildMenu"
}

[node name="MarginContainer" type="MarginContainer" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 500
custom_constants/margin_top = 100
custom_constants/margin_left = 500
custom_constants/margin_bottom = 100

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_left = 500.0
margin_top = 100.0
margin_right = 1420.0
margin_bottom = 980.0

[node name="Background" type="Sprite" parent="MarginContainer/Panel"]
texture = ExtResource( 16 )
centered = false

[node name="SelectedItem" type="Control" parent="MarginContainer/Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -332.0
margin_bottom = -32.0

[node name="SelectedTitle" type="Label" parent="MarginContainer/Panel/SelectedItem"]
anchor_right = 1.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
text = "Upgrade Menu"
align = 1

[node name="SelectedDescription" type="RichTextLabel" parent="MarginContainer/Panel/SelectedItem"]
anchor_right = 1.0
margin_left = 50.0
margin_top = 55.0
margin_right = -50.0
margin_bottom = 156.0
rect_min_size = Vector2( 0, 60 )
theme = ExtResource( 13 )
bbcode_enabled = true
bbcode_text = "[center]Click on a harvester part to get more information about its use and purchase options.[/center]"
text = "Click on a harvester part to get more information about its use and purchase options."
scroll_active = false

[node name="Prices" type="Sprite" parent="MarginContainer/Panel/SelectedItem"]
position = Vector2( 494, 191 )
texture = ExtResource( 19 )

[node name="BioPrice" type="Label" parent="MarginContainer/Panel/SelectedItem/Prices"]
margin_left = -232.0
margin_top = -16.0
margin_right = -212.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 18 )
text = "0"

[node name="OrePrice" type="Label" parent="MarginContainer/Panel/SelectedItem/Prices"]
margin_left = -8.0
margin_top = -16.0
margin_right = 12.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 18 )
text = "0"

[node name="GasPrice" type="Label" parent="MarginContainer/Panel/SelectedItem/Prices"]
margin_left = 216.0
margin_top = -16.0
margin_right = 236.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 18 )
text = "0"

[node name="BuyButton" type="Button" parent="MarginContainer/Panel/SelectedItem"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -248.0
margin_top = -49.0
margin_right = 252.0
margin_bottom = 11.0
rect_min_size = Vector2( 200, 60 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 18 )
custom_styles/normal = SubResource( 2 )
text = "upgrade"

[node name="ItemButtons" type="Control" parent="MarginContainer/Panel"]
anchor_right = 1.0

[node name="BodyChain" type="Button" parent="MarginContainer/Panel/ItemButtons"]
margin_left = 48.0
margin_top = 71.0
margin_right = 308.0
margin_bottom = 211.0
rect_min_size = Vector2( 260, 140 )
theme = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="MarginContainer/Panel/ItemButtons/BodyChain"]
position = Vector2( 144, 69 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="BodySpider" type="Button" parent="MarginContainer/Panel/ItemButtons"]
margin_left = 331.0
margin_top = 71.0
margin_right = 591.0
margin_bottom = 211.0
rect_min_size = Vector2( 260, 100 )
theme = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="MarginContainer/Panel/ItemButtons/BodySpider"]
position = Vector2( 115, 21 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="BodyJet" type="Button" parent="MarginContainer/Panel/ItemButtons"]
margin_left = 614.0
margin_top = 71.0
margin_right = 874.0
margin_bottom = 211.0
rect_min_size = Vector2( 260, 100 )
theme = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="MarginContainer/Panel/ItemButtons/BodyJet"]
position = Vector2( 134, 61 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )

[node name="CollectorBiomass" type="Button" parent="MarginContainer/Panel/ItemButtons"]
margin_left = 47.0
margin_top = 228.0
margin_right = 307.0
margin_bottom = 368.0
rect_min_size = Vector2( 260, 140 )
theme = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="MarginContainer/Panel/ItemButtons/CollectorBiomass"]
position = Vector2( -81, 63 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )

[node name="CollectorOre" type="Button" parent="MarginContainer/Panel/ItemButtons"]
margin_left = 331.0
margin_top = 231.0
margin_right = 591.0
margin_bottom = 371.0
rect_min_size = Vector2( 260, 100 )
theme = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="MarginContainer/Panel/ItemButtons/CollectorOre"]
position = Vector2( -102, 70 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 6 )

[node name="CollectorGas" type="Button" parent="MarginContainer/Panel/ItemButtons"]
margin_left = 614.0
margin_top = 231.0
margin_right = 874.0
margin_bottom = 371.0
rect_min_size = Vector2( 260, 100 )
theme = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="MarginContainer/Panel/ItemButtons/CollectorGas"]
position = Vector2( -91, 68 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="HeadShield" type="Button" parent="MarginContainer/Panel/ItemButtons"]
margin_left = 48.0
margin_top = 390.0
margin_right = 308.0
margin_bottom = 530.0
rect_min_size = Vector2( 260, 140 )
theme = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="MarginContainer/Panel/ItemButtons/HeadShield"]
position = Vector2( 175, 188 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 10 )

[node name="HeadCannon" type="Button" parent="MarginContainer/Panel/ItemButtons"]
margin_left = 331.0
margin_top = 391.0
margin_right = 591.0
margin_bottom = 531.0
rect_min_size = Vector2( 260, 100 )
theme = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="MarginContainer/Panel/ItemButtons/HeadCannon"]
position = Vector2( 146, 172 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 8 )

[node name="HeadCoil" type="Button" parent="MarginContainer/Panel/ItemButtons"]
margin_left = 616.0
margin_top = 391.0
margin_right = 876.0
margin_bottom = 531.0
rect_min_size = Vector2( 260, 100 )
theme = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="MarginContainer/Panel/ItemButtons/HeadCoil"]
position = Vector2( 149, 184 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )

[node name="CloseButton" type="TextureButton" parent="MarginContainer/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -68.0
margin_top = 12.0
margin_right = 532.0
margin_bottom = 556.0
grow_horizontal = 0
rect_min_size = Vector2( 50, 50 )
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )

[connection signal="pressed" from="MarginContainer/Panel/SelectedItem/BuyButton" to="." method="_on_BuyButton_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/ItemButtons/BodyChain" to="." method="_on_BodyChain_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/ItemButtons/BodySpider" to="." method="_on_BodySpider_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/ItemButtons/BodyJet" to="." method="_on_BodyJet_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/ItemButtons/CollectorBiomass" to="." method="_on_CollectorBiomass_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/ItemButtons/CollectorOre" to="." method="_on_CollectorOre_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/ItemButtons/CollectorGas" to="." method="_on_CollectorGas_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/ItemButtons/HeadShield" to="." method="_on_HeadShield_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/ItemButtons/HeadCannon" to="." method="_on_HeadCannon_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/ItemButtons/HeadCoil" to="." method="_on_HeadCoil_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/CloseButton" to="." method="_on_CloseButton_pressed"]
